--- a/index.html
+++ b/index.html
@@ -159,19 +159,19 @@
     <section class="mb-10 p-4 bg-white rounded-lg" id="my-contacts">
       <div class="flex justify-center space-x-6">
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-purple-500" href="https://github.com/MMwenda" target="_blank">
-          <i class="fab fa-github fa-2x"></i>
+          <i title="Github" class="fab fa-github fa-2x"></i>
         </a>
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-pink-500" href="https://instagram.com/mo.nikered_mo" target="_blank">
-          <i class="fab fa-instagram fa-2x"></i>
+          <i title="Instagram" class="fab fa-instagram fa-2x"></i>
         </a>
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-blue-500" href="https://www.linkedin.com/in/maurice-mwenda-7b50222a5/" target="_blank">
-          <i class="fab fa-linkedin fa-2x"></i>
+          <i title="Linkedin" class="fab fa-linkedin fa-2x"></i>
         </a>
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-green-500" href="tel:+254799442143">
-          <i class="fas fa-phone fa-2x"></i>
+          <i title="Phone" class="fas fa-phone fa-2x"></i>
         </a>
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-yellow-500" href="mailto:maur1cemmwenda@gmail.com">
-          <i class="fas fa-envelope fa-2x"></i>
+          <i title="Email" class="fas fa-envelope fa-2x"></i>
         </a>
       </div>
     </section>
