--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>PORTFOLIO</title>
+    <title>MY PORTFOLIO</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/src/styles.css">
     <link rel="stylesheet" href="/src/scrollbar.css">
