--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
     
 
     <footer class="text-center mt-16">
-      <p class="text-gray-600">© 2024 Maurice Ndwiga Mwenda <span class="text-yellow-500 underline">[MnM]</span> . All rights reserved.</p>
+      <p class="text-gray-600">© 2024 Maurice Ndwiga Mwenda <span class="text-yellow-500 underline">[MnM]</span> . All rights reserved.</p> <br>
+       <p class=" text-3xl text-red-700 underline">[WEBSITE STILL UNDER CONSTRUCTION]</p>
     </footer>
   </div>
   <script src="js/main.js"></script>
