--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </span>
         </h3>
         <p class="text-gray-600 mt-4 text-3xl">
-          From Nairobi, Kenya. I have rich experience in web design, but I am still learning new things every day, and I am also a student at GOMYCODE Kenya.
+          From Nairobi, Kenya. I have rich experience in web design, but I am still learning new things every day, and I am also a student at <a class="text-red-700 hover:text-red-600 active:text-red-400 underline" href="https://gomycode.com/ke/">GOMYCODE Kenya</a>.
         </p>
         <div class="mt-6">
           <button class="bg-green-600 text-white px-4 py-2 rounded-full mr-4 text-2xl">
