--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         About Me
       </h2>
       <p class="text-gray-600 text-3xl">
-        I am a passionate web developer with over 12 years of experience. I specialize in creating dynamic and beautiful web pages. I have a strong background in HTML, CSS, JavaScript, and various web development frameworks.
+        I am a passionate web developer with over 12 months of experience. I specialize in creating dynamic and beautiful web pages. I have a strong background in HTML, CSS, JavaScript, and various web development frameworks.
       </p>
     </section>
 
