--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>MY PORTFOLIO</title>
+    <title>MnM</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/src/styles.css">
     <link rel="stylesheet" href="/src/scrollbar.css">
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="w-1/2 relative">
-        <img alt="Profile Picture" class="rounded-full mx-auto" height="400" src="https://placehold.co/400" width="400"/>
+        <img alt="Profile Picture" class="rounded-full mx-auto" height="400" src="assets/ME2.jpg" width="400"/>
         <div class="absolute top-0 right-0 bg-white p-2 rounded-full shadow-lg">
           <div class="text-center">
             <p class="text-3xl font-bold">
