--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
           MAURICE MWENDA.
         </h1>
         <h3 class="text-4xl text-gray-800">
-          I AM
+          I AM A
           <span class="font-bold">
-            Web Developer
+            Software Developer, Student, AvGeek, Tech Enthusiast and Minimalist.
           </span>
         </h3>
         <p class="text-gray-600 mt-4 text-3xl">
-          From Nairobi, Kenya. I have rich experience in web development, but I am still learning new things every day, and I am also a student at <a class="text-red-700 hover:text-red-600 active:text-red-400 underline" href="https://gomycode.com/ke/">GOMYCODE Kenya</a>.
+          From Nairobi, Kenya. I have rich experience in Web & Software development, but I am still learning new things every day, and I am also a student at <a class="text-red-700 hover:text-red-600 active:text-red-400 underline" href="https://gomycode.com/ke/">GOMYCODE Kenya</a>.
         </p>
         <div class="mt-6">
           <button class="bg-green-600 text-white px-4 py-2 rounded-full mr-4 text-2xl">
