Dark/Light Mode button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/src/scrollbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/aae4edfe28.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
@@ -22,7 +23,9 @@
 
       <div class="flex space-x-4">
         <button class="bg-gray-200 text-gray-800 px-4 py-2 rounded-full text-2xl" id="theme-toggle">
-          Dark Mode
+          <i class="fa-solid fa-moon" style="color: #B197FC;"></i>
+          <!--  Dark Mode
+          Light Mode -->
         </button>
       </div>
     </header>
