--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
   </head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B3KLF5YWC1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B3KLF5YWC1');
+</script>
+
 <body class="transition duration-500 w-full ">
   <div id="loading-screen" class="fixed inset-0 flex items-center justify-center bg-white z-50">
     <div class="loader"></div>
