--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
   </head>
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B3KLF5YWC1"></script>
+  <!-- Google tag (gtag.js) --> 
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-B3KLF5YWC1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-B3KLF5YWC1');
-</script>
+</script> -->
 
 <body class="transition duration-500 w-full ">
   <div id="loading-screen" class="fixed inset-0 flex items-center justify-center bg-white z-50">
@@ -30,7 +30,7 @@
   </div>
   <div class="p-8 bg-white shadow-lg rounded-lg">
     <header class="flex justify-between items-center mb-8">
-      <h1 class="glow text-2xl font-bold cursor-pointer text-green-950" title="IKIGAI">生きがい</h1>
+      <h1 class="glow text-2xl font-bold cursor-pointer text-green-950" title="KAIZEN">カイゼン</h1>
 
       <div class="flex space-x-4">
         <button class="bg-gray-200 text-gray-800 px-4 py-2 rounded-full text-2xl" id="theme-toggle">
@@ -58,9 +58,11 @@
           From Nairobi, Kenya. I have rich experience in Web & Software development, but I am still learning new things every day, and I am also a student at <a class="text-red-700 hover:text-red-600 active:text-red-400 underline" href="https://gomycode.com/ke/">GOMYCODE Kenya</a>.
         </p>
         <div class="mt-6">
-          <button class="bg-green-600 text-white px-4 py-2 rounded-full mr-4 text-2xl">
+          <a href="/public/Curriculum Vitae.pdf" target="_blank" rel="noopener noreferrer" class="bg-green-600 text-white px-4 py-2 rounded-full mr-4 text-2xl">
+            <!-- rel="noreferrer" ensures that no information about the user's previous location is shared with the new page
+            grel="noopener" prevents the new page from accessing the window.opener object, safeguarding the original page from unwanted manipulation.-->
             DOWNLOAD CV
-          </button>
+          </a>
           <button class="bg-gray-200 text-gray-800 px-4 py-2 rounded-full text-2xl">
             MY SKILLS
           </button>
