--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-yellow-500" href="mailto:maur1cemmwenda@gmail.com">
           <i title="Email" class="fas fa-envelope fa-2x"></i>
         </a>
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-gray-500" href="https://x.com/maur1cemwenda">
+          <i title="X" class="fa-brands fa-x-twitter fa-2x"></i>
+        </a>
       </div>
     </section>
     
