--- a/index.html
+++ b/index.html
@@ -193,20 +193,20 @@
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-purple-500" href="https://github.com/MMwenda" target="_blank">
           <i title="Github" class="fab fa-github fa-2x"></i>
         </a>
-        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-pink-500" href="https://instagram.com/mo.nikered_mo" target="_blank">
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-pink-500" href="https://www.instagram.com/maur1cemwenda" target="_blank">
           <i title="Instagram" class="fab fa-instagram fa-2x"></i>
         </a>
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-blue-500" href="https://www.linkedin.com/in/maurice-mwenda-7b50222a5/" target="_blank">
           <i title="Linkedin" class="fab fa-linkedin fa-2x"></i>
+        </a>
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-gray-500" href="https://x.com/maur1cemwenda">
+          <i title="X" class="fa-brands fa-x-twitter fa-2x"></i>
         </a>
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-green-500" href="tel:+254799442143">
           <i title="Phone" class="fas fa-phone fa-2x"></i>
         </a>
         <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-yellow-500" href="mailto:maur1cemmwenda@gmail.com">
           <i title="Email" class="fas fa-envelope fa-2x"></i>
-        </a>
-        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-gray-500" href="https://x.com/maur1cemwenda">
-          <i title="X" class="fa-brands fa-x-twitter fa-2x"></i>
         </a>
       </div>
     </section>
