--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         About Me
       </h2>
       <p class="text-gray-600 text-3xl">
-        I am a passionate web developer with over 12 months of experience. I specialize in creating dynamic and beautiful web pages. I have a strong background in HTML, CSS, JavaScript, and various web development frameworks.
+        Hey there! I'm Maurice Mwenda, a 19-year-old tech enthusiast who dove headfirst into the tech world in 2024 and hasn't looked back since. That same year, I joined <a class="text-red-700 hover:text-red-600 active:text-red-400 underline" href="https://gomycode.com/ke/">GOMYCODE Kenya</a>, where I'm still a student, navigating the ups and downs of tech life. Sure, I've hit a few bumps that delayed my graduation, but giving up? Not in my vocabulary! <br> I'm all about learning new things and teaming up with awesome people. 😁<br><br>
+        Oh, and did I mention I'm a <i>hardcore avgeek</i>? ✈️ The sound of a jet engine is music to my ears, and I can't get enough of everything aviation. One day, I hope to soar into that field too! 🚀
       </p>
     </section>
 
