Update on About Me

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
     </main>
     <section class="mb-16" id="about-me">
       <h2 class="text-6xl font-bold mb-4 underline">
-        About Me
+        What Makes Me Tick
       </h2>
       <p class="text-gray-600 text-3xl">
         Hey there! I'm Maurice Mwenda, a 19-year-old tech enthusiast who dove headfirst into the tech world in 2024 and hasn't looked back since. That same year, I joined <a class="text-red-700 hover:text-red-600 active:text-red-400 underline" href="https://gomycode.com/ke/">GOMYCODE Kenya</a>, where I'm still a student, navigating the ups and downs of tech life. Sure, I've hit a few bumps that delayed my graduation, but giving up? Not in my vocabulary! <br> I'm all about learning new things and teaming up with awesome people. 😁<br><br>
-        Oh, and did I mention I'm a <i>hardcore avgeek</i>? ✈️ The sound of a jet engine is music to my ears, and I can't get enough of everything aviation. One day, I hope to soar into that field too! 🚀
+        Oh, and did I mention I'm a <i>hardcore avgeek</i>? ✈️ The sound of a jet engine is music to my ears, and I can't get enough of everything aviation. When I'm not buried into coding this is the stuff that makes my day and one day, I hope to soar into that field too! 🚀
       </p>
     </section>
 
