--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h3 class="text-4xl text-gray-800">
           I AM A
           <span class="font-bold">
-            Software Developer, Student, AvGeek, Tech Enthusiast and Minimalist.
+            Software Developer, Student, AvGeek, TechGeek and Minimalist.
           </span>
         </h3>
         <p class="text-gray-600 mt-4 text-3xl">
@@ -77,7 +77,7 @@
               <a href="https://en.wikipedia.org/wiki/HTML" class="block px-4 py-2 text-xl text-orange-700 " role="menuitem">HTML5</a>
               <a href="https://en.wikipedia.org/wiki/CSS" class="block px-4 py-2 text-xl text-blue-700 " role="menuitem">CSS3</a>
               <a href="https://en.wikipedia.org/wiki/JavaScript" class="block px-4 py-2 text-xl text-yellow-700 " role="menuitem">JavaScript</a>
-              <a href="https://en.wikipedia.org/wiki/MEAN" class="block px-4 py-2 text-xl text-green-600 " role="menuitem">MERN</a>
+              <a href="https://en.wikipedia.org/wiki/MEAN" class="block px-4 py-2 text-xl text-green-600 " role="menuitem">M.E.R.N</a>
             </div>
           </div>
         </div>
@@ -191,22 +191,22 @@
 
     <section class="mb-10 p-4 bg-white rounded-lg" id="my-contacts">
       <div class="flex justify-center space-x-6">
-        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-purple-500" href="https://github.com/MMwenda" target="_blank">
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-purple-500" href="https://github.com/MMwenda" target="_blank" rel="noopener noreferrer">
           <i title="Github" class="fab fa-github fa-2x"></i>
         </a>
-        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-pink-500" href="https://www.instagram.com/maur1cemwenda" target="_blank">
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-pink-500" href="https://www.instagram.com/maur1cemwenda" target="_blank" rel="noopener noreferrer">
           <i title="Instagram" class="fab fa-instagram fa-2x"></i>
         </a>
-        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-blue-500" href="https://www.linkedin.com/in/maurice-mwenda-7b50222a5/" target="_blank">
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-blue-500" href="https://www.linkedin.com/in/maurice-mwenda-7b50222a5/" target="_blank" rel="noopener noreferrer">
           <i title="Linkedin" class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-gray-500" href="https://x.com/maur1cemwenda">
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-gray-500" href="https://x.com/maur1cemwenda" target="_blank" rel="noopener noreferrer">
           <i title="X" class="fa-brands fa-x-twitter fa-2x"></i>
         </a>
-        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-green-500" href="tel:+254799442143">
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-green-500" href="tel:+254799442143" target="_blank" rel="noopener noreferrer">
           <i title="Phone" class="fas fa-phone fa-2x"></i>
         </a>
-        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-yellow-500" href="mailto:maur1cemmwenda@gmail.com">
+        <a class="text-gray-900 transition-transform transform hover:scale-110 hover:text-yellow-500" href="mailto:maur1cemmwenda@gmail.com" target="_blank" rel="noopener noreferrer">
           <i title="Email" class="fas fa-envelope fa-2x"></i>
         </a>
       </div>
