--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
           <img alt="To-Do List Project" class="rounded-lg mb-4" src="https://placehold.co/600x300" />
           <h3 class="text-4xl font-bold mb-2  project">
-            To-Do List
+            MakeAWish KE
           </h3>
           <p class="text-gray-600 text-3xl">
             Description of project 2.
@@ -147,7 +147,7 @@
         <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
           <img alt="Trine Moments Photography Project" class="rounded-lg mb-4" src="https://placehold.co/600x300" />
           <h3 class="text-4xl font-bold mb-2 project">
-            Trine Moments Photography
+            Trine Moments
           </h3>
           <p class="text-gray-600 text-3xl">
             Description of project 3.
