--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
           <h3 class="text-4xl font-bold mb-2  project">
             MakeAWish KE
           </h3>
-          <p class="text-gray-600 text-3xl">
-            Description of project 2.
+          <p class="text-red-600 text-3xl">
+            ---
           </p>
         </div>
         <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
@@ -149,8 +149,8 @@
           <h3 class="text-4xl font-bold mb-2 project">
             Trine Moments
           </h3>
-          <p class="text-gray-600 text-3xl">
-            Description of project 3.
+          <p class="text-red-600 text-3xl">
+            ---
           </p>
         </div>
         <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
