--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>MnM</title>
+    <title>Maurice Mwenda - Software Engineer</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/src/styles.css">
     <link rel="stylesheet" href="/src/scrollbar.css">
@@ -77,7 +77,7 @@
               <a href="https://en.wikipedia.org/wiki/HTML" class="block px-4 py-2 text-xl text-orange-700 " role="menuitem">HTML5</a>
               <a href="https://en.wikipedia.org/wiki/CSS" class="block px-4 py-2 text-xl text-blue-700 " role="menuitem">CSS3</a>
               <a href="https://en.wikipedia.org/wiki/JavaScript" class="block px-4 py-2 text-xl text-yellow-700 " role="menuitem">JavaScript</a>
-              <a href="https://en.wikipedia.org/wiki/MEAN" class="block px-4 py-2 text-xl text-green-600 " role="menuitem">M.E.R.N</a>
+              <a href="https://en.wikipedia.org/wiki/MEAN" class="block px-4 py-2 text-xl text-green-600 " role="menuitem">M.E.R.N <br> (MongoDB, Express, React, NodeJS) </a>
             </div>
           </div>
         </div>
