--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5" id="dropdown-menu">
             <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="dropdown-toggle">
               <a href="https://en.wikipedia.org/wiki/HTML" class="block px-4 py-2 text-xl text-orange-700 " role="menuitem">HTML5</a>
-              <a href="https://en.wikipedia.org/wiki/CSS" class="block px-4 py-2 text-xl text-blue-700 " role="menuitem">CSS3</a>
+              <a href="https://en.wikipedia.org/wiki/CSS" class="block px-4 py-2 text-xl text-blue-700 " role="menuitem">CSS3 <br> (Bootstrap, Tailwind) </a>
               <a href="https://en.wikipedia.org/wiki/JavaScript" class="block px-4 py-2 text-xl text-yellow-700 " role="menuitem">JavaScript</a>
               <a href="https://en.wikipedia.org/wiki/MEAN" class="block px-4 py-2 text-xl text-green-600 " role="menuitem">M.E.R.N <br> (MongoDB, Express, React, NodeJS) </a>
             </div>
@@ -127,7 +127,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
           <img alt="SkySync Project" class="rounded-lg mb-4" src="/assets/skysync.png" />
-          <h3 class="text-4xl font-bold mb-2 skysync project">
+          <h3 class="text-4xl font-bold mb-2 skysync project cursor-pointer">
             SkySync
           </h3>
           <p class="text-gray-600 text-3xl">
@@ -137,7 +137,7 @@
         </div>
         <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
           <img alt="To-Do List Project" class="rounded-lg mb-4" src="https://placehold.co/600x300" />
-          <h3 class="text-4xl font-bold mb-2  project">
+          <h3 class="text-4xl font-bold mb-2 project cursor-pointer">
             MakeAWish KE
           </h3>
           <p class="text-red-600 text-3xl">
@@ -146,7 +146,7 @@
         </div>
         <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
           <img alt="Trine Moments Photography Project" class="rounded-lg mb-4" src="https://placehold.co/600x300" />
-          <h3 class="text-4xl font-bold mb-2 project">
+          <h3 class="text-4xl font-bold mb-2 project cursor-pointer">
             Trine Moments
           </h3>
           <p class="text-red-600 text-3xl">
@@ -155,7 +155,7 @@
         </div>
         <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
           <img alt="WRITEBook Project" class="rounded-lg mb-4" src="https://placehold.co/600x300" />
-          <h3 class="queuebridge text-4xl font-bold mb-2 project">
+          <h3 class="queuebridge text-4xl font-bold mb-2 project cursor-pointer">
             QueueBridge
           </h3>
           <p class="text-gray-600 text-3xl">
