--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
           </div>
           <div class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5" id="dropdown-menu">
             <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="dropdown-toggle">
-              <a href="https://en.wikipedia.org/wiki/HTML" class="block px-4 py-2 text-xl text-orange-700 " role="menuitem">HTML5</a>
-              <a href="https://en.wikipedia.org/wiki/CSS" class="block px-4 py-2 text-xl text-blue-700 " role="menuitem">CSS3 <br> (Bootstrap, Tailwind) </a>
-              <a href="https://en.wikipedia.org/wiki/JavaScript" class="block px-4 py-2 text-xl text-yellow-700 " role="menuitem">JavaScript</a>
-              <a href="https://en.wikipedia.org/wiki/MEAN" class="block px-4 py-2 text-xl text-green-600 " role="menuitem">M.E.R.N <br> (MongoDB, Express, React, NodeJS) </a>
+              <a href="https://en.wikipedia.org/wiki/HTML" class="block px-4 py-2 text-xl text-orange-700 " role="menuitem">• HTML5</a>
+              <a href="https://en.wikipedia.org/wiki/CSS" class="block px-4 py-2 text-xl text-blue-700 " role="menuitem">• CSS3 <br> (Bootstrap, Tailwind) </a>
+              <a href="https://en.wikipedia.org/wiki/JavaScript" class="block px-4 py-2 text-xl text-yellow-700 " role="menuitem">• JavaScript</a>
+              <a href="https://en.wikipedia.org/wiki/MEAN" class="block px-4 py-2 text-xl text-green-600 " role="menuitem">• M.E.R.N <br> (MongoDB, Express, React, NodeJS) </a>
             </div>
           </div>
         </div>
