--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
   </head>
 
+  
   <!-- Google tag (gtag.js) --> 
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-B3KLF5YWC1"></script>
 <script>
@@ -24,6 +25,9 @@
 </script> -->
 
 <body class="transition duration-500 w-full ">
+
+  <p class=" text-3xl text-red-700 underline">[WEBSITE STILL UNDER CONSTRUCTION]</p>
+
   <div id="loading-screen" class="fixed inset-0 flex items-center justify-center bg-white z-50">
     <div class="loader"></div>
     <div class="cssanimation leFadeInRight sequence text-2xl"> WELCOME </div>
@@ -86,7 +90,7 @@
         </div>
       </div>
       <div class="w-1/2 relative">
-        <img alt="Profile Picture" class="rounded-full mx-auto" height="400" src="assets/ME2.jpg" width="400"/>
+        <img alt="Profile Picture" class="rounded-full mx-auto" height="400" src="https://placehold.co/600x300" width="400"/>
         <div class="absolute top-0 right-0 bg-white p-2 rounded-full shadow-lg">
           <div class="text-center">
             <p class="text-3xl font-bold">
@@ -125,7 +129,7 @@
         My Projects
       </h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
+        <div class="bg-gray-200 p-4 rounded-lg shadow-lg moove">
           <img alt="SkySync Project" class="rounded-lg mb-4" src="/assets/skysync.png" />
           <h3 class="text-4xl font-bold mb-2 skysync project cursor-pointer">
             SkySync
@@ -135,7 +139,7 @@
             <span class="text-red-700">[UNFINISHED]</span>
           </p>
         </div>
-        <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
+        <div class="bg-gray-200 p-4 rounded-lg shadow-lg moove">
           <img alt="To-Do List Project" class="rounded-lg mb-4" src="https://placehold.co/600x300" />
           <h3 class="text-4xl font-bold mb-2 project cursor-pointer">
             MakeAWish KE
@@ -144,7 +148,7 @@
             ---
           </p>
         </div>
-        <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
+        <div class="bg-gray-200 p-4 rounded-lg shadow-lg moove">
           <img alt="Trine Moments Photography Project" class="rounded-lg mb-4" src="https://placehold.co/600x300" />
           <h3 class="text-4xl font-bold mb-2 project cursor-pointer">
             Trine Moments
@@ -153,7 +157,7 @@
             ---
           </p>
         </div>
-        <div class="bg-gray-200 p-4 rounded-lg shadow-lg">
+        <div class="bg-gray-200 p-4 rounded-lg shadow-lg moove">
           <img alt="WRITEBook Project" class="rounded-lg mb-4" src="https://placehold.co/600x300" />
           <h3 class="queuebridge text-4xl font-bold mb-2 project cursor-pointer">
             QueueBridge
@@ -169,7 +173,7 @@
     <!-- CONTACT ME -->  
 <section class="mb-16" id="contact-me">  
   <h2 class="text-6xl font-bold mb-4 underline">Get Intouch</h2>  
-  <form id="contact-form" class="bg-gray-200 p-8 rounded-lg shadow-lg">  
+  <form id="contact-form" class="bg-gray-200 p-8 rounded-lg shadow-lg moove2">  
     <div class="mb-4">  
       <label class="block text-gray-800 mb-2 text-2xl" for="name">Name</label>  
       <input class="w-full p-2 rounded-lg" id="name" name="name" type="text" required />  
