--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Under Major Construction</title>  
+    <title>Under Re-Construction</title>  
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">  
     <style>  
         body {  
             background-color: black;  
             color: white;  
             display: flex;  
+            flex-direction: column; /* Ensure content is stacked vertically */  
             justify-content: center;  
             align-items: center;  
             height: 100vh;  
@@ -17,31 +18,55 @@
             font-family: 'Montserrat', sans-serif;  
             text-align: center;  
         }  
+
         h1 {  
             background: linear-gradient(to right, #ff6a00, #ee0979);  
             -webkit-background-clip: text;  
             background-clip: text;  
             -webkit-text-fill-color: transparent;  
-            font-size: 4em;  
+            font-size: 100px;   
             margin: 0;  
         }  
+
         footer {  
             position: absolute;  
             bottom: 10px;  
             width: 100%;  
             text-align: center;  
-            font-size: 14px;  
+            font-size: 40px; 
             color: white;  
+        }  
+
+        @media (max-width: 768px) {  
+            h1 {  
+                font-size: 50px;   
+            }  
+
+            footer {  
+                font-size: 15px;   
+                bottom: 3px;   
+            }  
+        }  
+
+        @media (max-width: 480px) {  
+            h1 {  
+                font-size: 50px;   
+            }  
+
+            footer {  
+                font-size: 10px;  
+                bottom: 3px;  
+            }  
         }  
     </style>  
 </head>  
 <body>  
     <div>  
-        <h1>Under MAJOR Construction</h1>  
+        <h1>Under Re-Construction</h1>  
     </div>  
-    <footer>  
-        <p>Construction by me</p>
-      <p >© 2024 Maurice Ndwiga Mwenda [MnM] . All rights reserved.</p> <br>
-    </footer>
+    <footer>
+      <p>Re-construction by me, ofc</p>
+        <p>© 2025 Maurice Ndwiga Mwenda [MnM]. All rights reserved.</p>  
+    </footer>   
 </body>  
 </html>
