Major Re-construction

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>  
 <body>  
     <div>  
-        <h1>Under Re-Construction</h1>  
+        <h1>Under MAJOR Re-Construction</h1>  
     </div>  
     <footer>
       <p>Re-construction by me, ofc</p>
