--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Under Re-Construction</title>  
+    <title>Maurice Mwenda - Software Engineer</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">  
     <style>  
         body {  
             background-color: black;  
             color: white;  
             display: flex;  
-            flex-direction: column; /* Ensure content is stacked vertically */  
+            flex-direction: column;
             justify-content: center;  
             align-items: center;  
             height: 100vh;  
