--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Maurice Mwenda - Software Engineer</title>
+    <title>Maurice Mwenda - Software Engineer</title>  
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">  
     <style>  
         body {  
             background-color: black;  
             color: white;  
             display: flex;  
-            flex-direction: column;
+            flex-direction: column;  
             justify-content: center;  
             align-items: center;  
             height: 100vh;  
             margin: 0;  
             font-family: 'Montserrat', sans-serif;  
             text-align: center;  
+            overflow: hidden; /* no scrollbars*/  
+        }  
+
+        .starry-background {  
+            position: fixed; /* background fixed */  
+            top: 0;  
+            left: 0;  
+            width: 100%;  
+            height: 100%;  
+            overflow: hidden; /* no scrollbars */	 
+            z-index: 1; /*  stars behind the content */  
+        }  
+
+        .star {  
+            position: absolute;  
+            border-radius: 50%;  
+            background: white; 
+            opacity: 0.8; 
         }  
 
         h1 {  
@@ -26,6 +44,7 @@
             -webkit-text-fill-color: transparent;  
             font-size: 55px;   
             margin: 0;  
+            z-index: 2; /* text is above stars */  
         }  
 
         footer {  
@@ -33,8 +52,9 @@
             bottom: 10px;  
             width: 100%;  
             text-align: center;  
-            font-size: 17px; 
+            font-size: 17px;   
             color: white;  
+            z-index: 2; /* footer is above stars */  
         }  
 
         @media (max-width: 768px) {  
@@ -58,15 +78,27 @@
                 bottom: 3px;  
             }  
         }  
+
+        @keyframes twinkle {  
+            0%, 100% {  
+                opacity: 0.8;  
+            }  
+            50% {  
+                opacity: 0.4;  
+            }  
+        }  
     </style>  
 </head>  
 <body>  
+    <div class="starry-background"></div>  
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
-    <footer>
-      <p>Re-construction by me, ofc</p>
+    <footer>  
+        <p>Re-construction by me, ofc</p>  
         <p>© 2025 Maurice Ndwiga Mwenda [MnM]. All rights reserved.</p>  
     </footer>   
+
+    <script src="stars.js"></script>  
 </body>  
 </html>
